src/test/ui/compile-fail-migration/thread-local-in-ctfe.nll.stderr
error[E0625]: thread-local statics cannot be accessed at compile-time
  --> $DIR/thread-local-in-ctfe.rs:16:17
   |
LL | static B: u32 = A;
   |                 ^

error[E0625]: thread-local statics cannot be accessed at compile-time
  --> $DIR/thread-local-in-ctfe.rs:19:18
   |
LL | static C: &u32 = &A;
   |                  ^^

error[E0597]: `A` does not live long enough
  --> $DIR/thread-local-in-ctfe.rs:19:18
   |
LL | static C: &u32 = &A;
   |                  ^^- `A` dropped here while still borrowed
   |                  |
   |                  borrowed value does not live long enough
   |
   = note: borrowed value must be valid for the static lifetime...

error[E0625]: thread-local statics cannot be accessed at compile-time
  --> $DIR/thread-local-in-ctfe.rs:22:16
   |
LL | const D: u32 = A;
   |                ^

error[E0625]: thread-local statics cannot be accessed at compile-time
  --> $DIR/thread-local-in-ctfe.rs:25:17
   |
LL | const E: &u32 = &A;
   |                 ^^

error[E0597]: `A` does not live long enough
  --> $DIR/thread-local-in-ctfe.rs:25:17
   |
LL | const E: &u32 = &A;
   |                 ^^- `A` dropped here while still borrowed
   |                 |
   |                 borrowed value does not live long enough
   |
   = note: borrowed value must be valid for the static lifetime...

error[E0625]: thread-local statics cannot be accessed at compile-time
  --> $DIR/thread-local-in-ctfe.rs:29:5
   |
LL |     A
   |     ^

error: aborting due to 7 previous errors

Some errors occurred: E0597, E0625.
For more information about an error, try `rustc --explain E0597`.
